--- a/project/templates/all_events.html
+++ b/project/templates/all_events.html
@@ -1,16 +1,17 @@
 {% extends 'base.html' %} {% load static %} {% block breadcrumb %}
 <li class="breadcrumb-item"><a href="{% url 'home' %}">Home</a></li>
 <li class="breadcrumb-item active">Events</li>
-{% endblock %} {% block content %}
+{% endblock %} {% block content %} {% if user.is_authenticated %}
 <div class="mb-4">
     <a href="{% url 'new_event' %}" class="btn btn-primary">New event</a>
 </div>
+{% endif %}
 <section class="product spad">
     <div class="container">
         <div class="row">
             <div class="col-lg-4 col-md-4">
                 <div class="section-title">
-                    <h4>Latest Events</h4>
+                    <h4>All Events</h4>
                 </div>
             </div>
             <div class="col-lg-8 col-md-8">
@@ -32,7 +33,7 @@
                         <div class="product__item__pic set-bg" data-setbg="{% static 'img/product/no_image.png' %}"> {% endif %}
                             <div class="label new">{{ event.date }} </div>
                             <ul class="product__hover">
-                                <li><a href="img/product/product-1.jpg" class="image-popup"><span class="arrow_expand"></span></a></li>
+                                <li><a href="{{ event.event_picture.url }}" class="image-popup"><span class="arrow_expand"></span></a></li>
                                 <li><a href="#"><span class="icon_heart_alt"></span>  {{ event.get_likes_count }}</a></li>
                                 <li><a href="{% url 'new_reply' event.pk %}"><span class="fa fa-reply"></span>  {{ event.get_replies_count }} </a></li>
                             </ul>
