--- a/project/templates/base.html
+++ b/project/templates/base.html
@@ -7,7 +7,8 @@
     <title>{% block title %}Meet{% endblock %}</title>
     <link href="https://fonts.googleapis.com/css2?family=Gloria+Hallelujah&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
-    <link rel="stylesheet" href="{% static 'css/app.css' %}"> {% block stylesheet %}{% endblock %}
+    <link rel="stylesheet" href="{% static 'css/star.css' %}">
+    <link rel="stylesheet" href="{% static 'css/app.css' %}">{% block stylesheet %}{% endblock %}
     <script src="https://kit.fontawesome.com/c6e6d54a26.js" crossorigin="anonymous"></script>
     <meta name="description" content="Ashion Template">
     <meta name="keywords" content="Ashion, unica, creative, html">
@@ -200,15 +201,7 @@
                     </div>
                 </div>
                 <div class="col-lg-2 col-md-3 col-sm-5">
-                    <div class="footer__widget">
-                        <h6>Quick links</h6>
-                        <ul>
-                            <li><a href="#">About</a></li>
-                            <li><a href="#">Blogs</a></li>
-                            <li><a href="#">Contact</a></li>
-                            <li><a href="#">FAQ</a></li>
-                        </ul>
-                    </div>
+
                 </div>
                 <div class="col-lg-2 col-md-3 col-sm-4">
                     <div class="footer__widget">
@@ -216,26 +209,10 @@
                         <ul>
                             <li>{% if user.is_authenticated %}
                                 <a href="{% url 'account' user.id %}">My Account</a>{% else %} <a href="#">My Account</a>{% endif %}</li>
-                            <li><a href="#">Orders Tracking</a></li>
-                            <li><a href="#">Checkout</a></li>
-                            <li><a href="#">Wishlist</a></li>
+                            <li><a href="{% url 'password_change' %}"> Change Password</a></li>
+                            <li><a href="{% url 'wlt_attend_events' %}">Would Like To Attend</a></li>
+                            <li><a href="{% url 'liked_events' %}">Liked Events</a></li>
                         </ul>
-                    </div>
-                </div>
-                <div class="col-lg-4 col-md-8 col-sm-8">
-                    <div class="footer__newslatter">
-                        <h6>NEWSLETTER</h6>
-                        <form action="#">
-                            <input type="text" placeholder="Email">
-                            <button type="submit" class="site-btn">Subscribe</button>
-                        </form>
-                        <div class="footer__social">
-                            <a href="#"><i class="fa fa-facebook"></i></a>
-                            <a href="#"><i class="fa fa-twitter"></i></a>
-                            <a href="#"><i class="fa fa-youtube-play"></i></a>
-                            <a href="#"><i class="fa fa-instagram"></i></a>
-                            <a href="#"><i class="fa fa-pinterest"></i></a>
-                        </div>
                     </div>
                 </div>
             </div>
