--- a/project/templates/new_reply.html
+++ b/project/templates/new_reply.html
@@ -10,7 +10,7 @@
             <div class="col-lg-8 col-md-8">
                 <div class="blog__details__content">
                     <div class="blog__details__item">
-                        <img src="img/blog/details/blog-details.jpg" alt="">
+                        <img src="{{event.get_image}}" alt="">
                         <div class="blog__details__item__title">
                             <span class="tip">{{event.name}}</span>
                             <h4>{{event.description}}</h4>
@@ -18,14 +18,34 @@
                                 <li>by <span>{{event.created_by}}</span></li>
                                 <li>{{event.created_at}}</li>
                                 <li>{{event.get_replies_count}} Replies</li>
+                                <li>{{event.get_attendees_count}} Attendees</li>
                             </ul>
                         </div>
                     </div>
+                    <div class="rating">
+                        <i class="fa fa-star"></i>
+                        <i class="fa fa-star"></i>
+                        <i class="fa fa-star"></i>
+                        <i class="fa fa-star"></i>
+                        <i class="fa fa-star"></i>
+                    </div>
+                    <div class="product__details__widget">
+                        <ul>
+                            <li>
+                                <span>Date:</span> {{event.date}}
+                            </li>
+                            <li>
+                                <span>Quota: </span> {{ event.get_attendees_count }} / {{ event.max_num_of_attendees }}
+                            </li>
+                            <li>
+                                {% if not event.is_online %}<span> Place :</span> {{ event.place }}{% endif %}
+                            </li>
+                            <li>
+                                <span>Payment :</span> {% if event.payment_type == 'Not free' %} {{event.payment}} TL {% else %} {{ event.payment_type }} {% endif %}
+                            </li>
+                        </ul>
+                    </div>
                     <div class="blog__details__desc">
-                        <p>Afashion season can be defined as much by the people on the catwalk as it can by the clothes they are wearing. This time around, a key moment came at the end of Marc Jacobs’ New York show, when an almost makeup-free Christy Turlington
-                            made a rare return to the catwalk, aged 50 (she also stars, with the designer himself, in the label’s AW ad campaign), where the average catwalk model is around 18.</p>
-                        <p>A few days later, Simone Rocha arguably upped the ante. The 32-year-old’s show – in part inspired by Louise Bourgeois, who lived until she was 98 – featured models in their 30s and 40s, including cult favourite Jeny Howorth and
-                            actor Chloë Sevigny.</p>
                     </div>
                     <div class="blog__details__tags">
                         <a href="#">{{event.category.name}}</a>
@@ -35,19 +55,38 @@
                         <div class="row">
                             <div class="col-lg-6 col-md-6 col-sm-6">
                                 <div class="blog__details__btn__item">
-                                    <h6><a href="#"><i class="fa fa-angle-left"></i> Previous posts</a></h6>
+                                    {% if event.created_by == user %}
+                                    <h6><a href="{% url 'edit_event' event.pk %}"> Edit <i class="fa fa-pencil" aria-hidden="true"></i> </a></h6> {% endif %}
                                 </div>
                             </div>
                             <div class="col-lg-6 col-md-6 col-sm-6">
                                 <div class="blog__details__btn__item blog__details__btn__item--next">
-                                    <h6><a href="#">Next posts <i class="fa fa-angle-right"></i></a></h6>
+                                    <h6>{% if event.created_by == user %}
+                                        <form method="post" novalidate>
+                                            {% csrf_token %}
+                                            <button name='Delete' type="submit"> Delete  <i class="fa fa-trash-o" aria-hidden="true"></i></button> {% endif %}
+                                        </form>
+                                    </h6>
+                                    <h6>{% if user.is_authenticated and not event.created_by == user %}
+                                        <form method="post" novalidate>
+                                            {% csrf_token %}
+                                            <button name='Like' type="submit">Like <i class="fas fa-thumbs-up fa-beat fa-1x "></i> </button>
+                                            <!--<div class="like-btn" style="display: inline">
+                                                <a href="javascript:void();" id="like" {% if liked %} style="margin-right: 5px; color: #7c071b" {% else %} style="margin-right: 10px; color: #726f6f" {% endif %} onclick="Like({{ event.pk }};">
+                                                    <div class="fa-stack fa-2x" style="margin-right: 10px">
+                                                        <i class="fa fa-heart fa-stack-2x"></i>
+                                                    </div>
+                                                </a>
+                                            </div> -->{% if not event.is_occured %} <button name='Attend' type="submit">Attend <i class="fa fa-plus" aria-hidden="true"></i></button> {%endif %}
+                                        </form> <br> {% endif %} {{event.get_likes_count}} likes / {{event.get_attendees_count}} attendees
+                                    </h6>
                                 </div>
                             </div>
                         </div>
                     </div>
                     <div class="blog__details__comment">
                         <h5> {{event.get_replies_count}} Replies</h5>
-                        <a href="{% url 'new_reply' event.pk %}" class="leave-btn">New Reply</a> {% for reply in event.replies.all %}
+                        <a href="{% url 'new_reply' event.pk %}" class="leave-btn">New Reply <i class="fa fa-reply" aria-hidden="true"></i></a> {% for reply in event.replies.all %}
                         <div class="blog__comment__item">
                             <div class="blog__comment__item__pic">
                                 <img src="img/blog/details/comment-1.jpg" alt="">
@@ -56,16 +95,55 @@
                                 <h6>{{reply.created_by}}</h6>
                                 <p>{{reply.message}}</p>
                                 <ul>
-                                    <li><i class="fa fa-clock-o"></i> {{reply.created_at}}</li>
+                                    <li><i class="fa fa-clock-o"></i>Created at: {{reply.created_at}}</li>
+                                    <li>Last update: {% if reply.updated_at == null %} {{ reply.created_at }} {% else %} {{ reply.updated_at }} {% endif %} </li>
                                 </ul>
                             </div>
+                            <br>{% if reply.created_by == user %}
+                            <h6><a href="{% url 'edit_reply' reply.event.pk reply.id %}"> Edit <i class="fa fa-pencil" aria-hidden="true"></i> </a></h6>{% endif %}
                         </div>
                         {% endfor %}
                     </div>
                 </div>
             </div>
+            <div class="col-lg-4 col-md-4">
+                <div class="blog__sidebar">
+                    <div class="blog__sidebar__item">
+                        <div class="section-title">
+                            <h4>Feature posts</h4>
+                        </div>
+                        <a href="#" class="blog__feature__item">
+                            <div class="blog__feature__item__pic">
+                                <img src="img/blog/sidebar/fp-1.jpg" alt="">
+                            </div>
+                            <div class="blog__feature__item__text">
+                                <h6>XXX</h6>
+                                <span>Seb 17, 2019</span>
+                            </div>
+                        </a>
+                    </div>
+                    </a>
+                </div>
+            </div>
             <form method="post" class="mb-4">
-                {% csrf_token %} {% include 'includes/form.html' %}
+                {% csrf_token %} {% include 'includes/form.html' %} {% if event.is_occured %}
+                <div id="full-stars-example-two">
+                    <div class="rating-group">
+                        <input disabled checked class="rating__input rating__input--none" name="rating3" id="rating3-none" value="0" type="radio">
+                        <label aria-label="1 star" class="rating__label" for="rating3-1"><i class="rating__icon rating__icon--star fa fa-star"></i></label>
+                        <input class="rating__input" name="rating3" id="rating3-1" value="1" type="radio">
+                        <label aria-label="2 stars" class="rating__label" for="rating3-2"><i class="rating__icon rating__icon--star fa fa-star"></i></label>
+                        <input class="rating__input" name="rating3" id="rating3-2" value="2" type="radio">
+                        <label aria-label="3 stars" class="rating__label" for="rating3-3"><i class="rating__icon rating__icon--star fa fa-star"></i></label>
+                        <input class="rating__input" name="rating3" id="rating3-3" value="3" type="radio">
+                        <label aria-label="4 stars" class="rating__label" for="rating3-4"><i class="rating__icon rating__icon--star fa fa-star"></i></label>
+                        <input class="rating__input" name="rating3" id="rating3-4" value="4" type="radio">
+                        <label aria-label="5 stars" class="rating__label" for="rating3-5"><i class="rating__icon rating__icon--star fa fa-star"></i></label>
+                        <input class="rating__input" name="rating3" id="rating3-5" value="5" type="radio">
+                    </div>
+                    <p class="desc" style="font-family: sans-serif; font-size:0.9rem">Please rate this event</p>
+                </div>
+                {% endif %}
                 <button type="submit" class="btn btn-success">Post a reply</button>
             </form>
         </div>
