--- a/project/templates/account.html
+++ b/project/templates/account.html
@@ -1,5 +1,4 @@
 {% extends 'base.html' %}{% load static %}{% load widget_tweaks %} {% block breadcrumb %}
-<li class="breadcrumb-item"><a href="{% url 'home' %}">Home</a></li>
 <li class="breadcrumb-item"> {% if not profile.user == user %} Profile of {{profile.user.username}} {% else %} My Account {% endif %}</li>
 {% endblock %} {% block content %}
 <div class="row gutters-sm">
@@ -11,11 +10,14 @@
                         width="150"> {% else %} {% if profile.gender == 'Female' %}<img src="https://bootdey.com/img/Content/avatar/avatar3.png" alt="Admin" class="rounded-circle" width="150"> {% endif %} {% endif %} {% endif %}
                     <div class="mt-3">
                         <h4>{{profile.user.username}}</h4>
-                        <p class="text-muted font-size-sm"> <a href="{% url 'followers' profile.user.id %}">{{profile.get_num_of_followers}} followers </a> </p> {% if user.is_authenticated %} {% if not profile.user == user %}
+                        <p class="text-muted font-size-sm"> <a id="follower-number" href="{% url 'followers' profile.user.id %}">{{profile.get_num_of_followers}} </a> followers</p> {% if user.is_authenticated %} {% if not profile.user == user %} {% if followed %}
                         <form method="post" novalidate>
-                            {% csrf_token %} <button name="follow" type="submit" class="btn btn-primary"> Follow </button>
+                            {% csrf_token %} <input font-family: FontAwesome; type="button" id="follow" data-id="{{profile.id}}" value="Unfollow" class="btn btn-primary">
                         </form>
-                        <button name="message" class="btn btn-outline-primary">Message</button>{% endif %} {% endif %}
+                        {% else %}
+                        <form method="post" novalidate>
+                            {% csrf_token %} <input font-family: FontAwesome; type="button" id="follow" data-id="{{profile.id}}" value="Follow" class="btn btn-primary">
+                        </form>{% endif %} {% endif %} {% endif %}
                     </div>
                 </div>
             </div>
@@ -147,6 +149,31 @@
     </div>
 </div>
 
-</div>
-</div>
+<script>
+    $('#follow').click(function(e) {
+        var a = $(this);
+        $.ajax({
+            type: "POST",
+            url: "{% url 'follow' %}",
+            data: {
+                'profile_id': '{{profile.id}}',
+                'csrfmiddlewaretoken': '{{ csrf_token }}'
+            },
+            dataType: "json",
+            success: function(response) {
+                if (a.val() === 'Follow') {
+                    a.val('Unfollow')
+                } else {
+                    a.val('Follow')
+                }
+                $("#follower-number").html(response.count)
+                console.log(response)
+            },
+            error: function(rs, e) {
+                alert(rs.responseText);
+            }
+        });
+    })
+</script>
+
 {% endblock %}
