--- a/project/templates/appreciation.html
+++ b/project/templates/appreciation.html
@@ -1,8 +1,5 @@
 {% extends 'base.html' %} {% load static %} {% block title %}Post a reply{% endblock %} {% block breadcrumb %}
-<li class="breadcrumb-item"><a href="{% url 'home' %}">Home</a></li>
-<li class="breadcrumb-item"><a href="{% url 'all_events' %}">Events</a></li>
-<li class="breadcrumb-item"><a href="{% url 'event' event.pk %}">{{ event.name }}</a></li>
-<li class="breadcrumb-item active">Post a reply</li>
+<li class="breadcrumb-item active">Appreciate the {{ event.name }}</li>
 {% endblock %} {% block content %}
 <section class="blog-details spad">
     <div class="container">
