--- a/project/templates/edit_event.html
+++ b/project/templates/edit_event.html
@@ -1,8 +1,5 @@
 {% extends 'base.html' %} {% load static %} {% load bootstrap4 %} {% block title %}Edit event{% endblock %} {% block breadcrumb %}
-<li class="breadcrumb-item"><a href="{% url 'home' %}">Meet</a></li>
-<li class="breadcrumb-item"><a href="{% url 'all_events' %}"> Events</a></li>
-<li class="breadcrumb-item"><a href="{% url 'event' one_event.pk %}">{{ one_event.name }}</a></li>
-<li class="breadcrumb-item active">Edit Event</li>
+<li class="breadcrumb-item active">Edit the {{ one_event.name }}</li>
 {% endblock %} {% block content %} {% if one_event.created_by == user %}
 <form method="post" class="mb-4" novalidate enctype='multipart/form-data'>
     {% csrf_token %} {% include 'includes/form.html' %} {% bootstrap_css %} {% bootstrap_javascript jquery='full' %} {{ form.media }}
