--- a/project/templates/edit_reply.html
+++ b/project/templates/edit_reply.html
@@ -1,12 +1,5 @@
 {% extends 'base.html' %} {% block title %}Edit post{% endblock %} {% block breadcrumb %}
-<li class="breadcrumb-item"><a href="{% url 'home' %}">Meet</a></li>
-<li class="breadcrumb-item">
-    <a href="{% url 'all_events' %}"> Events </a>
-</li>
-<li class="breadcrumb-item">
-    <a href="{% url 'event' reply.event.pk %}"> {{reply.event.name}}</a>
-</li>
-<li class="breadcrumb-item active">Edit reply</li>
+<li class="breadcrumb-item active">Edit reply for the {{reply.event.name}}</li>
 {% endblock %} {% block content %} {% if reply.created_by == user %}
 <form method="post" class="mb-4" novalidate>
     {% csrf_token %} {% include 'includes/form.html' %}
